{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 507,
  "lineage": "471db533-2415-296d-ec7e-b5a540a50fb5",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:internet-gateway/igw-01046cfe1b3a79e94",
            "id": "igw-01046cfe1b3a79e94",
            "owner_id": "857407436105",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0cfc31fbc86849be9"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01046cfe1b3a79e94",
            "id": "r-rtb-0366f69feb48232c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0366f69feb48232c1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:route-table/rtb-08263f92fafab9f43",
            "id": "rtb-08263f92fafab9f43",
            "owner_id": "857407436105",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CmBillingGroup": ""
            },
            "tags_all": {
              "CmBillingGroup": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfc31fbc86849be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:route-table/rtb-0366f69feb48232c1",
            "id": "rtb-0366f69feb48232c1",
            "owner_id": "857407436105",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01046cfe1b3a79e94",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CmBillingGroup": ""
            },
            "tags_all": {
              "CmBillingGroup": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfc31fbc86849be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6b8ae8d53ef55d3",
            "route_table_id": "rtb-08263f92fafab9f43",
            "subnet_id": "subnet-06f073bc1e9400211"
          },
          "dependencies": [
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_vpc.main_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024c9d3f9124c7ec8",
            "route_table_id": "rtb-08263f92fafab9f43",
            "subnet_id": "subnet-082c20ca6bf43f0ef"
          },
          "dependencies": [
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_vpc.main_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a2e74cdec6e6d4d",
            "route_table_id": "rtb-0366f69feb48232c1",
            "subnet_id": "subnet-0e6ceb6cc08eb214b"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.main_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016a4450f8e475591",
            "route_table_id": "rtb-0366f69feb48232c1",
            "subnet_id": "subnet-0980b1f45aca35b6e"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.main_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:security-group/sg-07ebb8aedbb88727d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_all_traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ebb8aedbb88727d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "101.108.71.45/32"
                ],
                "description": "allow_ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "3.112.23.0/29"
                ],
                "description": "allow_eip_ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "peerapon-test-sg",
            "name_prefix": "",
            "owner_id": "857407436105",
            "revoke_rules_on_delete": false,
            "tags": {
              "CmBillingGroup": "",
              "Name": "peerapon-test-sg"
            },
            "tags_all": {
              "CmBillingGroup": "",
              "Name": "peerapon-test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfc31fbc86849be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:subnet/subnet-06f073bc1e9400211",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f073bc1e9400211",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857407436105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0cfc31fbc86849be9"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:subnet/subnet-082c20ca6bf43f0ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082c20ca6bf43f0ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857407436105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0cfc31fbc86849be9"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:subnet/subnet-0e6ceb6cc08eb214b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6ceb6cc08eb214b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857407436105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0cfc31fbc86849be9"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:subnet/subnet-0980b1f45aca35b6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0980b1f45aca35b6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857407436105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0cfc31fbc86849be9"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:vpc/vpc-0cfc31fbc86849be9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04cff7af4e173ec05",
            "default_route_table_id": "rtb-0fc163d5b869eaba0",
            "default_security_group_id": "sg-0fd6f33f014d269fe",
            "dhcp_options_id": "dopt-5f606338",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cfc31fbc86849be9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc163d5b869eaba0",
            "owner_id": "857407436105",
            "tags": {
              "Name": "peerapon-test-vpc"
            },
            "tags_all": {
              "Name": "peerapon-test-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow_all_traffic",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:security-group-rule/sgr-07d30b55ac36f4013",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "allow_all_traffic",
            "from_port": null,
            "id": "sgr-07d30b55ac36f4013",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07ebb8aedbb88727d",
            "security_group_rule_id": "sgr-07d30b55ac36f4013",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.ec2_security_group",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow_eip_ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:security-group-rule/sgr-0dd1ceafbb14baaee",
            "cidr_ipv4": "3.112.23.0/29",
            "cidr_ipv6": null,
            "description": "allow_eip_ssh",
            "from_port": 22,
            "id": "sgr-0dd1ceafbb14baaee",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07ebb8aedbb88727d",
            "security_group_rule_id": "sgr-0dd1ceafbb14baaee",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.ec2_security_group",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "allow_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:security-group-rule/sgr-0c2039799710345e0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "allow_http",
            "from_port": 80,
            "id": "sgr-0c2039799710345e0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07ebb8aedbb88727d",
            "security_group_rule_id": "sgr-0c2039799710345e0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.ec2_security_group",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "allow_ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:857407436105:security-group-rule/sgr-0268a81dad715b1e2",
            "cidr_ipv4": "101.108.71.45/32",
            "cidr_ipv6": null,
            "description": "allow_ssh",
            "from_port": 22,
            "id": "sgr-0268a81dad715b1e2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07ebb8aedbb88727d",
            "security_group_rule_id": "sgr-0268a81dad715b1e2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.ec2_security_group",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}